--- a/papers/index.html
+++ b/papers/index.html
@@ -41,7 +41,7 @@ B.Geron, P.B.Levy. <a href="https://doi.org/10.1016/j.entcs.2016.09.035"><b>Iter
 
 P.B.Levy. <a href="https://doi.org/10.4230/LIPIcs.CALCO.2015.221"><b>Final coalgebras from corecursive algebras</b><a>  [<a href="finalmodal.pdf">Preprint</a>]in Proceedings of CALCO 2015.<p>
 
-J.Ad&aacute;mek, P.B.Levy, S.Milius, L.S.Moss, L.Sousa. <a href="http://dx.doi.org/10.1007/s10485-014-9372-9"><b>On final coalgebras of power-set functors and saturated trees</b></a> [<a href="http://www.mat.uc.pt/preprints/ps/p1239.pdf">preprint</a>], Applied Categorical Structures, volume 23, issue 4, pages 609-641, special issue dedicated to George Janelidze on the occasion of his sixtieth birthday, 2015,  &copy Springer. <p>
+J.Ad&aacute;mek, P.B.Levy, S.Milius, L.S.Moss, L.Sousa. <a href="http://dx.doi.org/10.1007/s10485-014-9372-9"><b>On final coalgebras of power-set functors and saturated trees</b></a> [<a href="http://www.mat.uc.pt/preprints/ps/p1239.pdf">Preprint</a>], Applied Categorical Structures, volume 23, issue 4, pages 609-641, special issue dedicated to George Janelidze on the occasion of his sixtieth birthday, 2015,  &copy Springer. <p>
 
 P.B.Levy, S.Staton. <b>Transition systems over games</b>,in  <a shref="http://dx.doi.org/10.1145/2603088.2603150"> [<a href="opercsllics.pdf">Preprint</a>] in Proceedings, Joint Meeting of the 23rd EACSL Annual Conference on Computer Science Logic and the 29th Annual ACM/IEEE Symposium on Logic in Computer Science, Vienna, Austria, 2014 &copy ACM. <p>
 
@@ -50,9 +50,9 @@ N.Bowler, S.Goncharov, P.B.Levy, L.Schr&ouml;der. <a href="http://dx.doi.org/10.
 
 S.Staton, P.B.Levy. <a href="http://dx.doi.org/10.1145/2429069.2429091"><b>Universal properties for impure programming languages</b></a> [<a href="universalcbv.pdf">Preprint</a>]  in Proceedings, Fortieth ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages, Rome, Italy, January 2013 &copy ACM. <p>
 
-R.Perera, U.A.Acar, J.Cheney, P.B.Levy.  <a href="http://dx.doi.org/10.1145/2364527.2364579"><b>Functional programs that explain their work</b></a> in Proceedings, 17th ACM-SIGPLAN International Conference on Functional Programming, Copenhagen, Denmark, September 2012 &copy ACM.  Supplementary <a href="functionalexplainsupp.pdf">technical report</a> <p>
+R.Perera, U.A.Acar, J.Cheney, P.B.Levy.  <a href="http://dx.doi.org/10.1145/2364527.2364579"><b>Functional programs that explain their work</b></a> [<a href="functionalexplainsupp.pdf">Technical report</a>] in Proceedings, 17th ACM-SIGPLAN International Conference on Functional Programming, Copenhagen, Denmark, September 2012 &copy ACM. <p>
 
-J.Ad&aacute;mek, N.Bowler, P.B.Levy, S.Milius. <a href="http://dx.doi.org/10.1109/LICS.2012.16"><b>Coproducts of monads on Set</b></a> in Proceedings, 27th Annual ACM/IEEE Symposium on Logic in Computer Science, Dubrovnik, Croatia, June 2012, pages 45-54  &copy IEEE. Here is an <a href = "coprodmonset.pdf">extended version</a> with proofs.  <p>
+J.Ad&aacute;mek, N.Bowler, P.B.Levy, S.Milius. <a href="http://dx.doi.org/10.1109/LICS.2012.16"><b>Coproducts of monads on Set</b></a> [<a href = "coprodmonset.pdf">Preprint with proofs</a>] in Proceedings, 27th Annual ACM/IEEE Symposium on Logic in Computer Science, Dubrovnik, Croatia, June 2012, pages 45-54  &copy IEEE.
 
 L.Aceto, A.Ingólfsdóttir, P.B.Levy, J.Sack.  <a href="http://dx.doi.org/10.1017/S0960129511000375"><b>Characteristic formulae: a general approach</b></a> [<a href="char-revised-mscs.pdf">Preprint version</a> from 2010],  <a href="">Mathematical
     Structures in Computer Science 22(2)</a>, special issue devoted to papers from EXPRESS 2009, pages 125-173, &copy Cambridge University Press, 2012. <p>
@@ -178,7 +178,7 @@ P.B.Levy. <b> Boolean precongruences </b> [<a href="boolprec.pdf"> pdf </a>] <p>
     <hr>
     <address><a href="mailto:P.B.Levy@cs.bham.ac.uk">Paul Blain Levy</a></address>
 <!-- Created: Wed Jan 31 19:52:04 EST 2001 -->
-<!-- hhmts start -->Last modified: Sat Mar 15 20:53:36 GMT 2025 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sat Mar 15 20:56:02 GMT 2025 <!-- hhmts end -->
   </body>
 </html>
 
