--- a/papers/index.html
+++ b/papers/index.html
@@ -52,7 +52,7 @@ S.Staton, P.B.Levy. <a href="http://dx.doi.org/10.1145/2429069.2429091"><b>Unive
 
 R.Perera, U.A.Acar, J.Cheney, P.B.Levy.  <a href="http://dx.doi.org/10.1145/2364527.2364579"><b>Functional programs that explain their work</b></a> [<a href="functionalexplainsupp.pdf">Technical report</a>] in Proceedings, 17th ACM-SIGPLAN International Conference on Functional Programming, Copenhagen, Denmark, September 2012 &copy ACM. <p>
 
-J.Ad&aacute;mek, N.Bowler, P.B.Levy, S.Milius. <a href="http://dx.doi.org/10.1109/LICS.2012.16"><b>Coproducts of monads on Set</b></a> [<a href = "coprodmonset.pdf">Preprint with proofs</a>] in Proceedings, 27th Annual ACM/IEEE Symposium on Logic in Computer Science, Dubrovnik, Croatia, June 2012, pages 45-54  &copy IEEE.
+J.Ad&aacute;mek, N.Bowler, P.B.Levy, S.Milius. <a href="http://dx.doi.org/10.1109/LICS.2012.16"><b>Coproducts of monads on Set</b></a> [<a href = "coprodmonset.pdf">Preprint with proofs</a>] in Proceedings, 27th Annual ACM/IEEE Symposium on Logic in Computer Science, Dubrovnik, Croatia, June 2012, pages 45-54  &copy IEEE. <p>
 
 L.Aceto, A.Ingólfsdóttir, P.B.Levy, J.Sack.  <a href="http://dx.doi.org/10.1017/S0960129511000375"><b>Characteristic formulae: a general approach</b></a> [<a href="char-revised-mscs.pdf">Preprint version</a> from 2010],  <a href="">Mathematical
     Structures in Computer Science 22(2)</a>, special issue devoted to papers from EXPRESS 2009, pages 125-173, &copy Cambridge University Press, 2012. <p>
@@ -178,7 +178,7 @@ P.B.Levy. <b> Boolean precongruences </b> [<a href="boolprec.pdf"> pdf </a>] <p>
     <hr>
     <address><a href="mailto:P.B.Levy@cs.bham.ac.uk">Paul Blain Levy</a></address>
 <!-- Created: Wed Jan 31 19:52:04 EST 2001 -->
-<!-- hhmts start -->Last modified: Sat Mar 15 20:56:02 GMT 2025 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sat Mar 15 20:57:59 GMT 2025 <!-- hhmts end -->
   </body>
 </html>
 
