preprint improved again

--- a/papers/index.html
+++ b/papers/index.html
@@ -60,7 +60,7 @@ L.Aceto, A.Ingólfsdóttir, P.B.Levy, J.Sack.  <a href="http://dx.doi.org/10.101
 
 V.Koutavas, P.B.Levy, E.Summii. <a href="http://dx.doi.org/10.1016/j.entcs.2011.09.023"><b>From applicative to environmental bisimulation</b></a> [<a href="applicenviron.pdf">Preprint</a>], Proceedings, 27th conference on the Mathematical Foundations of Programming Semantics, Carnegie Mellon, Pittsburgh, PA, May 2011, ENTCS volume 276, pages 215-235 (article 12) &copy Elsevier.  Expanded version of <a href="http://drops.dagstuhl.de/opus/volltexte/2010/2807/pdf/10351.KoutavasVasileios.ExtAbstract.2807.pdf"><b>Limitations of applicative bisimulation (preliminary report)</b></a> by the same authors, Proceedings, Dagstuhl seminar on Modelling, controlling and reasoning about state, 2010. <p>
 
-P.B.Levy. <a href="http://dx.doi.org/10.1007/978-3-642-19805-2_3"><b>Similarity Quotients as Final Coalgebras</B></a> [<a href="simshort.pdf">Preprint</a>].  In M.Hofmann (ed.), Proceedings</A>, 14th international conference on Foundations of Software Science and Computation Structures, Saarbruecken, Germany, March-April 2011, LNCS vol. 6604, pages 27-41,  &copy Springer. Here is a <b>long version</b> [<a href="simshortlong.pdf">Preprint</a>] with proofs and additional results. <p>
+P.B.Levy. <a href="http://dx.doi.org/10.1007/978-3-642-19805-2_3"><b>Similarity Quotients as Final Coalgebras</B></a> [<a href="simshort.pdf">Preprint</a>].  In M.Hofmann (ed.), Proceedings</A>, 14th international conference on Foundations of Software Science and Computation Structures, Saarbruecken, Germany, March-April 2011, LNCS vol. 6604, pages 27-41,  &copy Springer. Here is a <a href="simshortlong.pdf"><b>long version</b></a> with proofs and additional results. <p>
 
 P.B.Levy. <a href="http://hal.inria.fr/hal-00512377"><b>Characterizing recursive programs up to bisimilarity</b></a> [<a href="ccsrecur.pdf">Preprint</a>], Proceedings of the 7th Workshop on Fixed Points in Computer Science, Brno, Czech Repulbic, August 2010, HAL-INRIA 00512377, pages 47-52.<p>
 
@@ -178,7 +178,7 @@ P.B.Levy. <b> Boolean precongruences </b> [<a href="boolprec.pdf"> pdf </a>] <p>
     <hr>
     <address><a href="mailto:P.B.Levy@cs.bham.ac.uk">Paul Blain Levy</a></address>
 <!-- Created: Wed Jan 31 19:52:04 EST 2001 -->
-<!-- hhmts start -->Last modified: Sat Mar 15 20:58:39 GMT 2025 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sat Mar 15 21:00:31 GMT 2025 <!-- hhmts end -->
   </body>
 </html>
 
