--- a/papers/index.html
+++ b/papers/index.html
@@ -72,7 +72,7 @@ S.B.Lassen and P.B.Levy. <a href="http://dx.doi.org/10.1109/LICS.2008.26"><b>Typ
 
 P.B.Levy. <a href="http://dx.doi.org/10.1016/j.entcs.2008.10.015"><b>Global state considered helpful</b></a> [<a href="globalhelp.pdf">Preprint</a>] Proceedings, 24th conference on the Mathematical Foundations of Programming Semantics, University of Pennsylvania, Philadelphia PA USA, May 2008, ENTCS  volume 218, pages 241-259 (article 15) &copy Elsevier. <p>
 
-P.B.Levy.  <a href="http://dx.doi.org/10.1016/j.apal.2007.10.007"><b>Infinite trace equivalence</b></a> [<a href="finalglpljourn.pdf">Preprint</a>] Annals of Pure and Applied Logic</a>, vol. 151(2-3), pages 170-198, February 2008, special issue for for the 1st workshop on Games for Logic and Programming (GaLoP) 2005 &copy Elsevier.  Expanded version of P.B.Levy. <b><a href="http://dx.doi.org/10.1016/j.entcs.2005.11.069">Infinite trace equivalence</a></b> [<a href="mfpsinftrace.pdf">Preprint</a>]  Proceedings, 21st Conference on the Mathematical Foundations of Programming Semantics, Birmingham, U.K., June 2005, ENTCS volume 155 (published 2006), pages 467-496 (article 22)  &copy Elsevier. <p>
+P.B.Levy.  <a href="http://dx.doi.org/10.1016/j.apal.2007.10.007"><b>Infinite trace equivalence</b></a> [<a href="finalglpljourn.pdf">Preprint</a>] Annals of Pure and Applied Logic</a>, vol. 151(2-3), pages 170-198, February 2008, special issue for for the 1st workshop on Games for Logic and Programming (GaLoP) 2005 &copy Elsevier.  Expanded version of <b><a href="http://dx.doi.org/10.1016/j.entcs.2005.11.069">Infinite trace equivalence</a></b> [<a href="mfpsinftrace.pdf">Preprint</a>] by the same author in Proceedings, 21st Conference on the Mathematical Foundations of Programming Semantics, Birmingham, U.K., June 2005, ENTCS volume 155 (published 2006), pages 467-496 (article 22)  &copy Elsevier. <p>
 
 S.B.Lassen and P.B.Levy. <a href="http://dx.doi.org/10.1007/978-3-540-74915-8_23"><b>Typed normal form bisimulation</b></a> [<a href="LassenLevy2007tnfb-4.pdf">Preprint</a>].  LNCS vol. 4646, J. Duparc and T. A. Henzinger (eds.), Proceedings of the 6th EACSL Annual Conference on Computer Science and Logic (CSL 07), Lausanne, Switzerland, September 2007, pages 283-297 &copy Springer. <p>
 
@@ -80,11 +80,10 @@ P.B.Levy. <a href="http://dx.doi.org/10.1016/j.entcs.2007.02.036"><b>Amb breaks 
 
 J.M.E.Hyland, P.B.Levy, G.D.Plotkin and A.J.Power. <b>Combining algebraic effects with continuations</b> [<a href="comb_cont_journal.pdf">Preprint</a>], Festschrift for John Reynolds' 70th birthday, <a href="http://dx.doi.org/10.1016/j.tcs.2006.12.026">Theoretical Computer Science</a>, vol. 375 (1-3), pages 20-40, May 2007 &copy Elsevier.  Expanded version of <b>Combining continuations with other effects</b> [<a href="http://www.cs.bham.ac.uk/~pbl/papers/comb_cont.ps">Preprint</a>] by the same authors, 4th ACM-SIGPLAN Continuation Workshop, Venice, Italy, January 2004. <p>
 
-P.B.Levy. <b><a href="http://dx.doi.org/10.1007/s10990-006-0480-6">Call-by-push-value: decomposing call-by-value and call-by-name</a></b> [<a href="hosc05.pdf">Preprint</a>], Higher-Order and Symbolic Computation, volume 19(4), pages 377-414, December 2006 &copy Springer.  Expanded version of P.B.Levy. <a href="https://doi.org/10.1007/3-540-48959-2_17"> <b>Call-by-push-value: a subsuming paradigm (Extended Abstract)</b></a>
-[<A HREF="tlca99.pdf">Preprint</A>]
- LNCS vol. 1581, J.-Y. Girard, ed.,
-Proceedings, Typed Lambda-Calculi and Applications, L'Aquila, Italy,
-    April 1999, pages 228-242 &copy 
+P.B.Levy. <b><a href="http://dx.doi.org/10.1007/s10990-006-0480-6">Call-by-push-value: decomposing call-by-value and call-by-name</a></b> [<a href="hosc05.pdf">Preprint</a>], Higher-Order and Symbolic Computation, volume 19(4), pages 377-414, December 2006 &copy Springer.  Expanded version of <a href="https://doi.org/10.1007/3-540-48959-2_17"> <b>Call-by-push-value: a subsuming paradigm (Extended Abstract)</b></a>
+[<A HREF="tlca99.pdf">Preprint</A>] by the same author in Proceedings, 4th International Conference on Typed Lambda-Calculi and Applications,  L'Aquila, Italy,
+ LNCS volume 1581,
+     pages 228-242, 1999 &copy 
 Springer.
 <p>
 
@@ -107,8 +106,8 @@ Springer.
 <p>
 
 P.B.Levy. <a href="http://www.tac.mta.ca/tac/volumes/14/5/14-05abs.html"> <b>Adjunction models for call-by-push-value with stacks</b></a> Theory and Applications of Categories,  volume 14 (2005), article 5 (pages 75-110). 
-  Expanded version of P.B.Levy. <a href="https://doi.org/10.1016/S1571-0661(04)80568-1"><b>Adjunction models for call-by-push-value with stacks</b></a>
- [<a href="ctcs02.ps">Preprint</a>]
+  Expanded version of  <a href="https://doi.org/10.1016/S1571-0661(04)80568-1"><b>Adjunction models for call-by-push-value with stacks</b></a>
+ [<a href="ctcs02.ps">Preprint</a>] by the same author in 
  Proceedings, Category Theory in Computer Science 2002, Ottawa, August 2002,  vol. 69, article 13 &copy Elsevier.
 <p> 
 
@@ -178,7 +177,7 @@ P.B.Levy. <b> Boolean precongruences </b> [<a href="boolprec.pdf"> pdf </a>] <p>
     <hr>
     <address><a href="mailto:P.B.Levy@cs.bham.ac.uk">Paul Blain Levy</a></address>
 <!-- Created: Wed Jan 31 19:52:04 EST 2001 -->
-<!-- hhmts start -->Last modified: Sat Mar 15 21:00:31 GMT 2025 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sat Mar 15 21:05:46 GMT 2025 <!-- hhmts end -->
   </body>
 </html>
 
