--- a/papers/index.html
+++ b/papers/index.html
@@ -108,7 +108,7 @@ Springer.
 P.B.Levy. <a href="http://www.tac.mta.ca/tac/volumes/14/5/14-05abs.html"> <b>Adjunction models for call-by-push-value with stacks</b></a> Theory and Applications of Categories,  volume 14 (2005), article 5 (pages 75-110). 
   Expanded version of  <a href="https://doi.org/10.1016/S1571-0661(04)80568-1"><b>Adjunction models for call-by-push-value with stacks</b></a>
  [<a href="ctcs02.ps">Preprint</a>] by the same author in 
- Proceedings, 9th Conference on Category Theory in Computer Science, Ottawa, August 2002,  vol. 69, article 13 &copy Elsevier.
+ Proceedings, 9th Conference on Category Theory in Computer Science, Ottawa, August 2002,  ENTCS volume 69, article 13, pages 248-271 &copy Elsevier.
 <p> 
 
 P.B,Levy. <a href="http://www.springer.com/uk/home?SGWID=3-102-22-33666497-0&changeHeader=true&referer=www.wkap.nl&SHORTCUT=www.springer.com/prod/b/1-4020-1730-8"><b>Call-by-push-value.  A functional/imperative synthesis</b></a>, Semantic Structures in Computation, &copy Springer, 2004.
@@ -177,7 +177,7 @@ P.B.Levy. <b> Boolean precongruences </b> [<a href="boolprec.pdf"> pdf </a>] <p>
     <hr>
     <address><a href="mailto:P.B.Levy@cs.bham.ac.uk">Paul Blain Levy</a></address>
 <!-- Created: Wed Jan 31 19:52:04 EST 2001 -->
-<!-- hhmts start -->Last modified: Sat Mar 15 21:07:48 GMT 2025 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sat Mar 15 21:12:05 GMT 2025 <!-- hhmts end -->
   </body>
 </html>
 
