--- a/papers/index.html
+++ b/papers/index.html
@@ -43,7 +43,7 @@ P.B.Levy. <a href="https://doi.org/10.4230/LIPIcs.CALCO.2015.221"><b>Final coalg
 
 J.Ad&aacute;mek, P.B.Levy, S.Milius, L.S.Moss, L.Sousa. <a href="http://dx.doi.org/10.1007/s10485-014-9372-9"><b>On final coalgebras of power-set functors and saturated trees</b></a> [<a href="http://www.mat.uc.pt/preprints/ps/p1239.pdf">Preprint</a>], Applied Categorical Structures, volume 23, issue 4, pages 609-641, special issue dedicated to George Janelidze on the occasion of his sixtieth birthday, 2015,  &copy Springer. <p>
 
-P.B.Levy, S.Staton. <a href="http://dx.doi.org/10.1145/2603088.2603150"><b> Transition systems over games</b></a>,in  [<a href="opercsllics.pdf">Preprint</a>] in Proceedings, Joint Meeting of the 23rd EACSL Annual Conference on Computer Science Logic and the 29th Annual ACM/IEEE Symposium on Logic in Computer Science, Vienna, Austria, 2014 &copy ACM. <p>
+P.B.Levy, S.Staton. <a href="http://dx.doi.org/10.1145/2603088.2603150"><b> Transition systems over games</b></a> in  [<a href="opercsllics.pdf">Preprint</a>] in Proceedings, Joint Meeting of the 23rd EACSL Annual Conference on Computer Science Logic and the 29th Annual ACM/IEEE Symposium on Logic in Computer Science, Vienna, Austria, 2014 &copy ACM. <p>
 
 
 N.Bowler, S.Goncharov, P.B.Levy, L.Schr&ouml;der. <a href="http://dx.doi.org/10.2168/LMCS-9(3:22)2013"> <b>Exploring the boundaries of monad tensorability on Set</b></a> in Logical Methods in Computer Science 9(3) paper 22, 2013. <p>
@@ -177,7 +177,7 @@ P.B.Levy. <b> Boolean precongruences </b> [<a href="boolprec.pdf"> pdf </a>] <p>
     <hr>
     <address><a href="mailto:P.B.Levy@cs.bham.ac.uk">Paul Blain Levy</a></address>
 <!-- Created: Wed Jan 31 19:52:04 EST 2001 -->
-<!-- hhmts start -->Last modified: Sat Mar 15 21:14:44 GMT 2025 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sat Mar 15 21:15:39 GMT 2025 <!-- hhmts end -->
   </body>
 </html>
 
