--- a/papers/index.html
+++ b/papers/index.html
@@ -16,7 +16,7 @@ P.B.Levy. <a href="https://doi.org/10.1215/00294527-2024-0029"><b>Broad Infinity
 
 P.B.Levy. <a href ="https://doi.org/10.1093/philmat/nkac011"><b> The Price of Mathematical Scepticism</b></a> [<a href="allornothing.pdf">Preprint</a>], Philosophia Mathematica, volume 30(3), pages 283-305, 2022 &copy Oxford Academic. <p>
 
-P.B.Levy. <b> Semantics Column: Call-By-Push-Value </b> [<a href="siglogcbpv2.pdf">Preprint</a>], in <a href="https://dl.acm.org/toc/siglog/2022/9/2">ACM SIGLOG News 9(2)</a> pages 7-29, 2022.  With an introduction by Mike Mislove.  <p>
+P.B.Levy. <b> Semantics Column: Call-By-Push-Value </b> [<a href="siglogcbpv2.pdf">Preprint</a>], in <a href="https://dl.acm.org/toc/siglog/2022/9/2">ACM SIGLOG News 9(2)</a> pages 7-29, 2022 &copy ACM.  With an introduction by Mike Mislove.  <p>
 
 B. Jacobs, P.B.Levy, J.Rot. <a href="https://doi.org/10.1093/logcom/exab050"><b>Steps and Traces</b></a>, Journal of Logic and Computation 31(6), pages 1482-1525, 2021 &copy Oxford Academic.  Expanded version of <a href="https://doi.org/10.1007/978-3-030-00389-0_8"><b>Steps and Traces</b><a> [<a href="stepstraces.pdf">Preprint</a>] by the same authors, in the CMCS 2018 Proceedings, LNCS 11202, pages 122-143 &copy Springer. <p>
 
@@ -43,7 +43,7 @@ P.B.Levy. <a href="https://doi.org/10.4230/LIPIcs.CALCO.2015.221"><b>Final coalg
 
 J.Ad&aacute;mek, P.B.Levy, S.Milius, L.S.Moss, L.Sousa. <a href="http://dx.doi.org/10.1007/s10485-014-9372-9"><b>On final coalgebras of power-set functors and saturated trees</b></a> [<a href="http://www.mat.uc.pt/preprints/ps/p1239.pdf">Preprint</a>], Applied Categorical Structures, volume 23, issue 4, pages 609-641, special issue dedicated to George Janelidze on the occasion of his sixtieth birthday, 2015,  &copy Springer. <p>
 
-P.B.Levy, S.Staton. <a href="http://dx.doi.org/10.1145/2603088.2603150"><b> Transition systems over games</b></a> in  [<a href="opercsllics.pdf">Preprint</a>] in Proceedings, Joint Meeting of the 23rd EACSL Annual Conference on Computer Science Logic and the 29th Annual ACM/IEEE Symposium on Logic in Computer Science, Vienna, Austria, 2014 &copy ACM. <p>
+P.B.Levy, S.Staton. <a href="http://dx.doi.org/10.1145/2603088.2603150"><b> Transition systems over games</b></a> [<a href="opercsllics.pdf">Preprint</a>] in Proceedings, Joint Meeting of the 23rd EACSL Annual Conference on Computer Science Logic and the 29th Annual ACM/IEEE Symposium on Logic in Computer Science, Vienna, Austria, 2014 &copy ACM. <p>
 
 
 N.Bowler, S.Goncharov, P.B.Levy, L.Schr&ouml;der. <a href="http://dx.doi.org/10.2168/LMCS-9(3:22)2013"> <b>Exploring the boundaries of monad tensorability on Set</b></a> in Logical Methods in Computer Science 9(3) paper 22, 2013. <p>
@@ -177,7 +177,7 @@ P.B.Levy. <b> Boolean precongruences </b> [<a href="boolprec.pdf"> pdf </a>] <p>
     <hr>
     <address><a href="mailto:P.B.Levy@cs.bham.ac.uk">Paul Blain Levy</a></address>
 <!-- Created: Wed Jan 31 19:52:04 EST 2001 -->
-<!-- hhmts start -->Last modified: Sat Mar 15 21:16:38 GMT 2025 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sat Mar 15 21:54:48 GMT 2025 <!-- hhmts end -->
   </body>
 </html>
 
