--- a/papers/index.html
+++ b/papers/index.html
@@ -78,7 +78,7 @@ S.B.Lassen and P.B.Levy. <a href="http://dx.doi.org/10.1007/978-3-540-74915-8_23
 
 P.B.Levy. <a href="http://dx.doi.org/10.1016/j.entcs.2007.02.036"><b>Amb breaks well-pointedness, ground amb doesn't</b></a> [<a href="ambhowenew.pdf">Preprint</a>].  Proceedings of the 23rd conference on the Mathematical Foundations of Programming Semantics, New Orleans, April 2007, ENTCS volume 173, pages 221-239 (article 14) &copy Elsevier. <p>
 
-J.M.E.Hyland, P.B.Levy, G.D.Plotkin and A.J.Power. <b>Combining algebraic effects with continuations</b> [<a href="comb_cont_journal.pdf">Preprint</a>], Festschrift for John Reynolds' 70th birthday, <a href="http://dx.doi.org/10.1016/j.tcs.2006.12.026">Theoretical Computer Science</a>, vol. 375 (1-3), pages 20-40, May 2007 &copy Elsevier.  Expanded version of <b>Combining continuations with other effects</b> [<a href="http://www.cs.bham.ac.uk/~pbl/papers/comb_cont.ps">Preprint</a>] by the same authors, 4th ACM-SIGPLAN Continuation Workshop, Venice, Italy, January 2004. <p>
+J.M.E.Hyland, P.B.Levy, G.D.Plotkin and A.J.Power. <a href="http://dx.doi.org/10.1016/j.tcs.2006.12.026"><b>Combining algebraic effects with continuations</b></a> [<a href="comb_cont_journal.pdf">Preprint</a>], Festschrift for John Reynolds' 70th birthday, Theoretical Computer Science, vol. 375 (1-3), pages 20-40, May 2007 &copy Elsevier.  Expanded version of <b>Combining continuations with other effects</b> [<a href="http://www.cs.bham.ac.uk/~pbl/papers/comb_cont.ps">Preprint</a>] by the same authors, 4th ACM-SIGPLAN Continuation Workshop, Venice, Italy, January 2004. <p>
 
 P.B.Levy. <b><a href="http://dx.doi.org/10.1007/s10990-006-0480-6">Call-by-push-value: decomposing call-by-value and call-by-name</a></b> [<a href="hosc05.pdf">Preprint</a>], Higher-Order and Symbolic Computation, volume 19(4), pages 377-414, December 2006 &copy Springer.  Expanded version of <a href="https://doi.org/10.1007/3-540-48959-2_17"> <b>Call-by-push-value: a subsuming paradigm (Extended Abstract)</b></a>
 [<A HREF="tlca99.pdf">Preprint</A>] by the same author in Proceedings, 4th International Conference on Typed Lambda-Calculi and Applications,  L'Aquila, Italy,
@@ -177,7 +177,7 @@ P.B.Levy. <b> Boolean precongruences </b> [<a href="boolprec.pdf"> pdf </a>] <p>
     <hr>
     <address><a href="mailto:P.B.Levy@cs.bham.ac.uk">Paul Blain Levy</a></address>
 <!-- Created: Wed Jan 31 19:52:04 EST 2001 -->
-<!-- hhmts start -->Last modified: Sat Mar 15 21:54:48 GMT 2025 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sat Mar 15 22:13:12 GMT 2025 <!-- hhmts end -->
   </body>
 </html>
 
