--- a/papers/index.html
+++ b/papers/index.html
@@ -97,7 +97,7 @@ P.B.Levy. <b>Jumping semantics for call-by-push-value</b> [<a href="jumpsem.pdf"
 
 
 
-P.B.Levy, A.J.Power and H.Thielecke. <b><a href="http://dx.doi.org/10.1016/S0890-5401(03)00088-9">Modelling environments in call-by-value programming languages</a></b> &copy Elsevier, Information and Computation, 2003, vol. 185, pp. 182-210.
+P.B.Levy, A.J.Power and H.Thielecke. <b><a href="http://dx.doi.org/10.1016/S0890-5401(03)00088-9">Modelling environments in call-by-value programming languages</a></b> [<a href="johnhayopaul.pdf">Preprint</a>] Information and Computation, 2003, vol. 185, pp. 182-210 &copy Elsevier.
 <p>
 
 P.B.Levy. <a href="https://doi.org/10.1007/3-540-45793-3_16"><b>Possible world semantics for general storage in call-by-value</b></a> 
@@ -177,7 +177,7 @@ P.B.Levy. <b> Boolean precongruences </b> [<a href="boolprec.pdf"> pdf </a>] <p>
     <hr>
     <address><a href="mailto:P.B.Levy@cs.bham.ac.uk">Paul Blain Levy</a></address>
 <!-- Created: Wed Jan 31 19:52:04 EST 2001 -->
-<!-- hhmts start -->Last modified: Sat Mar 15 22:13:12 GMT 2025 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sat Mar 15 23:34:49 GMT 2025 <!-- hhmts end -->
   </body>
 </html>
 
