--- a/papers/index.html
+++ b/papers/index.html
@@ -97,8 +97,7 @@ P.B.Levy. <b>Jumping semantics for call-by-push-value</b> [<a href="jumpsem.pdf"
 
 
 
-P.B.Levy, A.J.Power and H.Thielecke. <b><a href="http://dx.doi.org/10.1016/S0890-5401(03)00088-9">Modelling environments in call-by-value programming languages</a></b> [<a href="johnhayopaul2.pdf">Preprint</a>] Information and Computation, 2003, vol. 185, pp. 182-210 &copy Elsevier.
-<p>
+P.B.Levy, A.J.Power and H.Thielecke. <b><a href="http://dx.doi.org/10.1016/S0890-5401(03)00088-9">Modelling environments in call-by-value programming languages</a></b> [<a href="johnhayopaul2.pdf">Preprint</a>] Information and Computation, 2003, vol. 185, pp. 182-210 &copy Elsevier.<p>
 
 P.B.Levy. <a href="https://doi.org/10.1007/3-540-45793-3_16"><b>Possible world semantics for general storage in call-by-value</b></a> 
 [<a href="storagecbv.ps">Preprint</a>]  LNCS vol. 2471 , J. Bradfield ed., Proceedings, Computer Science Logic, Edinburgh, September 2002, pages 232-246 &copy 
@@ -177,7 +176,7 @@ P.B.Levy. <b> Boolean precongruences </b> [<a href="boolprec.pdf"> pdf </a>] <p>
     <hr>
     <address><a href="mailto:P.B.Levy@cs.bham.ac.uk">Paul Blain Levy</a></address>
 <!-- Created: Wed Jan 31 19:52:04 EST 2001 -->
-<!-- hhmts start -->Last modified: Sat Mar 15 23:37:14 GMT 2025 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sat Mar 15 23:37:37 GMT 2025 <!-- hhmts end -->
   </body>
 </html>
 
