--- a/papers/index.html
+++ b/papers/index.html
@@ -54,8 +54,8 @@ R.Perera, U.A.Acar, J.Cheney, P.B.Levy.  <a href="http://dx.doi.org/10.1145/2364
 
 J.Ad&aacute;mek, N.Bowler, P.B.Levy, S.Milius. <a href="http://dx.doi.org/10.1109/LICS.2012.16"><b>Coproducts of monads on Set</b></a> [<a href = "coprodmonset.pdf">Preprint with proofs</a>] in Proceedings, 27th Annual ACM/IEEE Symposium on Logic in Computer Science, Dubrovnik, Croatia, June 2012, pages 45-54  &copy IEEE. <p>
 
-L.Aceto, A.Ingólfsdóttir, P.B.Levy, J.Sack.  <a href="http://dx.doi.org/10.1017/S0960129511000375"><b>Characteristic formulae: a general approach</b></a> [<a href="char-revised-mscs.pdf">Preprint</a> from 2010],  <a href="">Mathematical
-    Structures in Computer Science 22(2)</a>, special issue devoted to papers from EXPRESS 2009, pages 125-173, &copy Cambridge University Press, 2012. <p>
+L.Aceto, A.Ingólfsdóttir, P.B.Levy, J.Sack.  <a href="http://dx.doi.org/10.1017/S0960129511000375"><b>Characteristic formulae: a general approach</b></a> [<a href="char-revised-mscs.pdf">Preprint</a> from 2010],  Mathematical
+    Structures in Computer Science 22(2), special issue devoted to papers from EXPRESS 2009, pages 125-173, &copy Cambridge University Press, 2012. <p>
 
 
 V.Koutavas, P.B.Levy, E.Summii. <a href="http://dx.doi.org/10.1016/j.entcs.2011.09.023"><b>From applicative to environmental bisimulation</b></a> [<a href="applicenviron.pdf">Preprint</a>], Proceedings, 27th conference on the Mathematical Foundations of Programming Semantics, Carnegie Mellon, Pittsburgh, PA, May 2011, ENTCS volume 276, pages 215-235 (article 12) &copy Elsevier.  Expanded version of <a href="http://drops.dagstuhl.de/opus/volltexte/2010/2807/pdf/10351.KoutavasVasileios.ExtAbstract.2807.pdf"><b>Limitations of applicative bisimulation (preliminary report)</b></a> by the same authors, Proceedings, Dagstuhl seminar on Modelling, controlling and reasoning about state, 2010. <p>
@@ -176,7 +176,7 @@ P.B.Levy. <b> Boolean precongruences </b> [<a href="boolprec.pdf"> pdf </a>] <p>
     <hr>
     <address><a href="mailto:P.B.Levy@cs.bham.ac.uk">Paul Blain Levy</a></address>
 <!-- Created: Wed Jan 31 19:52:04 EST 2001 -->
-<!-- hhmts start -->Last modified: Sat Mar 15 23:37:37 GMT 2025 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sun Mar 16 01:29:23 GMT 2025 <!-- hhmts end -->
   </body>
 </html>
 
