--- a/papers/index.html
+++ b/papers/index.html
@@ -48,9 +48,9 @@ P.B.Levy, S.Staton. <a href="http://dx.doi.org/10.1145/2603088.2603150"><b> Tran
 
 N.Bowler, S.Goncharov, P.B.Levy, L.Schr&ouml;der. <a href="http://dx.doi.org/10.2168/LMCS-9(3:22)2013"> <b>Exploring the boundaries of monad tensorability on Set</b></a> in Logical Methods in Computer Science 9(3) paper 22, 2013. <p>
 
-S.Staton, P.B.Levy. <a href="http://dx.doi.org/10.1145/2429069.2429091"><b>Universal properties for impure programming languages</b></a> [<a href="universalcbv.pdf">Preprint</a>]  in Proceedings, Fortieth ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages, Rome, Italy, January 2013 &copy ACM. <p>
+S.Staton, P.B.Levy. <a href="http://dx.doi.org/10.1145/2429069.2429091"><b>Universal properties for impure programming languages</b></a> [<a href="universalcbv.pdf">Preprint</a>]  in Proceedings, 40th ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages, Rome, Italy, January 2013 &copy ACM. <p>
 
-R.Perera, U.A.Acar, J.Cheney, P.B.Levy.  <a href="http://dx.doi.org/10.1145/2364527.2364579"><b>Functional programs that explain their work</b></a> [<a href="functionalexplainsupp.pdf">Technical report</a>] in Proceedings, 17th ACM-SIGPLAN International Conference on Functional Programming, Copenhagen, Denmark, September 2012 &copy ACM. <p>
+R.Perera, U.A.Acar, J.Cheney, P.B.Levy.  <a href="http://dx.doi.org/10.1145/2364527.2364579"><b>Functional programs that explain their work</b></a> [<a href="functionalexplainsupp.pdf">Technical report</a>] in Proceedings, 17th ACM SIGPLAN International Conference on Functional Programming, Copenhagen, Denmark, September 2012 &copy ACM. <p>
 
 J.Ad&aacute;mek, N.Bowler, P.B.Levy, S.Milius. <a href="http://dx.doi.org/10.1109/LICS.2012.16"><b>Coproducts of monads on Set</b></a> [<a href = "coprodmonset.pdf">Preprint with proofs</a>] in Proceedings, 27th Annual ACM/IEEE Symposium on Logic in Computer Science, Dubrovnik, Croatia, June 2012, pages 45-54  &copy IEEE. <p>
 
@@ -176,7 +176,7 @@ P.B.Levy. <b> Boolean precongruences </b> [<a href="boolprec.pdf"> pdf </a>] <p>
     <hr>
     <address><a href="mailto:P.B.Levy@cs.bham.ac.uk">Paul Blain Levy</a></address>
 <!-- Created: Wed Jan 31 19:52:04 EST 2001 -->
-<!-- hhmts start -->Last modified: Sun Mar 16 01:29:23 GMT 2025 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sun Mar 16 01:31:38 GMT 2025 <!-- hhmts end -->
   </body>
 </html>
 
