--- a/papers/index.html
+++ b/papers/index.html
@@ -11,7 +11,7 @@
 
 
 
-P.B.Levy. <a href="https://doi.org/10.1215/00294527-2024-0029"><b>Broad Infinity and Generation Principles</b></a> [<a href="newgrowsafe.pdf">Preprint</a>], Notre Dame Journal of Formal Logic, volume 66(1), pages 79-141, 2025 &copy University of Notre Dame. <p>
+P.B.Levy. <a href="https://doi.org/10.1215/00294527-2024-0029"><b>Broad Infinity and Generation Principles</b></a> [<a href="newgrowsafe.pdf">Preprint</a>], Notre Dame Journal of Formal Logic, volume 66(1), pages 79-141, 2025 &copy Duke University Press. <p>
 
 
 P.B.Levy. <a href ="https://doi.org/10.1093/philmat/nkac011"><b> The Price of Mathematical Scepticism</b></a> [<a href="allornothing.pdf">Preprint</a>], Philosophia Mathematica, volume 30(3), pages 283-305, 2022 &copy Oxford Academic. <p>
@@ -176,7 +176,7 @@ P.B.Levy. <b> Boolean precongruences </b> [<a href="boolprec.pdf"> pdf </a>] <p>
     <hr>
     <address><a href="mailto:P.B.Levy@cs.bham.ac.uk">Paul Blain Levy</a></address>
 <!-- Created: Wed Jan 31 19:52:04 EST 2001 -->
-<!-- hhmts start -->Last modified: Sun Mar 16 01:31:38 GMT 2025 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Mon Mar 17 00:46:04 GMT 2025 <!-- hhmts end -->
   </body>
 </html>
 
