--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
 
   <body>
-<img SRC="blain2.gif" ALT="photo of Paul" height=188 width=153 align=RIGHT>
+<img SRC="pauloffice.jpg" ALT="photo of Paul" height=188 width=153 align=RIGHT>
    <b><font size = "+2">Paul Blain Levy</font></b> (rhymes with "all plain Stevie") <p>
 
   Reader in Theoretical Computer Science <br>
@@ -42,6 +42,6 @@ My <a href = "//www.springer.com/computer/swe/book/978-1-4020-1730-8">book on ca
 <p><hr><p>
 <address><a href="mailto:P.B.Levy@bham.ac.uk">Paul Blain Levy</a></address>
 <!-- Created: Thu Mar 19 10:53:31 PST 1998 -->
-<!-- hhmts start -->Last modified: Wed Nov 20 00:25:00 GMT 2024 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Mon Mar 24 10:24:49 GMT 2025 <!-- hhmts end -->
   </body>
 </html>
