--- a/papers/index.html
+++ b/papers/index.html
@@ -146,7 +146,7 @@ P.B.Levy. <b> Boolean precongruences </b> [<a href="boolprec.pdf"> pdf </a>] <p>
 
 <p>
 
-<b>The price of mathematical scepticism</b>  [<a href="sceptic.pdf">pdf</a>] <p>
+<b>The price of mathematical scepticism</b>  [<a href="scepticposet.pdf">pdf</a>] <p>
 
 <b>Locally graded categories</b>  [<a href="locgrade.pdf">pdf</a>] <p>
 
@@ -176,7 +176,7 @@ P.B.Levy. <b> Boolean precongruences </b> [<a href="boolprec.pdf"> pdf </a>] <p>
     <hr>
     <address><a href="mailto:P.B.Levy@cs.bham.ac.uk">Paul Blain Levy</a></address>
 <!-- Created: Wed Jan 31 19:52:04 EST 2001 -->
-<!-- hhmts start -->Last modified: Sat Apr 12 00:19:48 BST 2025 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Tue Apr 22 19:51:23 BST 2025 <!-- hhmts end -->
   </body>
 </html>
 
