Add Church award

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   Edgbaston, Birmingham, B15 2TT, UK <br>
   email: <A HREF="mailto:P.B.Levy@bham.ac.uk"><B>P.B.Levy@bham.ac.uk</B></A> <br><br>
 
+     
+
 
 <tr><td colspan=2>
 <p><hr><p>
@@ -37,6 +39,8 @@ If you're interested in PhD research in any of the above topics, please <a href=
 Course notes on <a href="mgsall.pdf">typed &lambda;-calculus</a> and <a href="coalglect.pdf">coalgebra</a> and <a href ="mgsfastlam.pdf">effects and call-by-push-value</a> from <a href="//www.cs.nott.ac.uk/MGS/">Midlands Graduate School</a> <br>
 My <a href = "//www.springer.com/computer/swe/book/978-1-4020-1730-8">book on call-by-push-value</a><br> 
 <p><hr><p>
+
+ My work on call-by-push-value was chosen for the <a href="https://siglog.org/winner-of-the-2025-alonzo-church-award/">2025 Church award</a>, to be presented at <a href="https://csl2026.github.io/">CSL</a> in February 2026. <p>
 
 <p><hr><p>
 <address><a href="mailto:P.B.Levy@bham.ac.uk">Paul Blain Levy</a></address>
