--- a/papers/index.html
+++ b/papers/index.html
@@ -119,7 +119,7 @@ P.B.Levy. <a href="thesisqmwphd.pdf  "> <b>Call-by-push-value</b></a> PhD thesis
 
 <p>
 
-<H2 id = "proceedings">Edited proceedings</h2>
+<H2 id = "proceedings">Edited volumes</h2>
 
 M.Kerjean, P.B.Levy, eds.  <a href="https://entics.episciences.org/volume/view/id/752">Proceedings</a> of the <b><a href="https://coalg.org/calco-mfps-2023/mfps/">39th Conference on  Mathematical Foundations of Programming Semantics</a></b>, Bloomington, Indiana, USA, June 2023.  Volume 3 of ENTICS. <p>
 
