improved CSL link

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Course notes on <a href="mgsall.pdf">typed &lambda;-calculus</a> and <a href="co
 My <a href = "//www.springer.com/computer/swe/book/978-1-4020-1730-8">book on call-by-push-value</a><br> 
 <p><hr><p>
 
- My work on call-by-push-value has won the <a href="https://siglog.org/winner-of-the-2025-alonzo-church-award/">2025 Church award</a>, to be presented at <a href="https://csl2026.github.io/">CSL</a> in February 2026. <p>
+ My work on call-by-push-value has won the <a href="https://siglog.org/winner-of-the-2025-alonzo-church-award/">2025 Church award</a>, to be presented at <a href="https://csl2026.github.io/">CSL 2026</a>. <p>
 
 <p><hr><p>
 <address><a href="mailto:P.B.Levy@bham.ac.uk">Paul Blain Levy</a></address>
