--- a/papers/index.html
+++ b/papers/index.html
@@ -8,9 +8,9 @@
     <h1>Paul Blain Levy, Papers</h1>
 
 <br> 
-P.B.Levy, M.Rogers.  <b>What is a monoid?"</b> in Proceedings, 53rd ACM SIGPLAN Symposium on Principles of Programming Languages [<a href="https://arxiv.org/abs/2504.12158">Preprint</a>], Rennes, France, January 2026 &copy ACM.<p>
+P.B.Levy, M.Rogers.  <b>What is a monoid?"</b> [<a href="">Preprint</a>] in Proceedings, 53rd ACM SIGPLAN Symposium on Principles of Programming Languages, Rennes, France, 2026 &copy ACM.<p>
      
-N.Bowler, S.Goncharov, P.B.Levy. <a href="https://ieeexplore.ieee.org/document/11186269"><b>Probabilistic Strategies: Definability and the Tensor Completeness Problem</b></a> [<a href="https://arxiv.org/abs/2504.09392">Preprint</a>], 40th Annual ACM/IEEE Symposium on Logic in Computer Science, Singapore, June 2025 &copy IEEE. <p>
+N.Bowler, S.Goncharov, P.B.Levy. <a href="https://ieeexplore.ieee.org/document/11186269"><b>Probabilistic Strategies: Definability and the Tensor Completeness Problem</b></a> [<a href="https://arxiv.org/abs/2504.09392">Preprint</a>], 40th Annual ACM/IEEE Symposium on Logic in Computer Science, Singapore, 2025 &copy IEEE. <p>
 
 P.B.Levy. <a href="https://doi.org/10.1215/00294527-2024-0029"><b>Broad Infinity and Generation Principles</b></a> [<a href="newgrowsafe.pdf">Preprint</a>], Notre Dame Journal of Formal Logic, volume 66(1), pages 79-141, 2025 &copy University of Notre Dame. <p>
 
