Link monoid paper to ACM library

--- a/papers/index.html
+++ b/papers/index.html
@@ -8,7 +8,7 @@
     <h1>Paul Blain Levy, Papers</h1>
 
 <br> 
-P.B.Levy, M.Rogers.  <b>What is a monoid?</b> [<a href="https://arxiv.org/abs/2504.12158">Preprint</a>] in Proceedings, 53rd ACM SIGPLAN Symposium on Principles of Programming Languages, Rennes, France, 2026 &copy ACM.<p>
+P.B.Levy, M.Rogers.  <a href="https://dl.acm.org/doi/abs/10.1145/3776727"><b>What is a monoid?</b></a> in Proceedings, 53rd ACM SIGPLAN Symposium on Principles of Programming Languages, Rennes, France, 2026 &copy ACM.<p>
      
 N.Bowler, S.Goncharov, P.B.Levy. <a href="https://ieeexplore.ieee.org/document/11186269"><b>Probabilistic Strategies: Definability and the Tensor Completeness Problem</b></a> [<a href="https://arxiv.org/abs/2504.09392">Preprint</a>], 40th Annual ACM/IEEE Symposium on Logic in Computer Science, Singapore, 2025 &copy IEEE. <p>
 
