--- a/papers/index.html
+++ b/papers/index.html
@@ -8,16 +8,16 @@
     <h1>Paul Blain Levy, Papers</h1>
 
 <br> 
-P.B.Levy, M.Rogers.  <a href="https://dl.acm.org/doi/abs/10.1145/3776727"><b>What is a monoid?</b></a> in Proceedings, 53rd ACM SIGPLAN Symposium on Principles of Programming Languages, Rennes, France, 2026 &copy ACM.<p>
+P.B.Levy, M.Rogers.  <a href="https://doi.org/10.1145/3776727"><b>What is a monoid?</b></a> in Proceedings, 53rd ACM SIGPLAN Symposium on Principles of Programming Languages, Rennes, France, 2026 &copy ACM.<p>
      
-N.Bowler, S.Goncharov, P.B.Levy. <a href="https://ieeexplore.ieee.org/document/11186269"><b>Probabilistic Strategies: Definability and the Tensor Completeness Problem</b></a> [<a href="https://arxiv.org/abs/2504.09392">Preprint</a>], 40th Annual ACM/IEEE Symposium on Logic in Computer Science, Singapore, 2025 &copy IEEE. <p>
+N.Bowler, S.Goncharov, P.B.Levy. <a href="https://doi.org/10.1109/LICS65433.2025.00043"><b>Probabilistic Strategies: Definability and the Tensor Completeness Problem</b></a> [<a href="https://arxiv.org/abs/2504.09392">Preprint</a>], 40th Annual ACM/IEEE Symposium on Logic in Computer Science, Singapore, 2025 &copy IEEE. <p>
 
 P.B.Levy. <a href="https://doi.org/10.1215/00294527-2024-0029"><b>Broad Infinity and Generation Principles</b></a> [<a href="newgrowsafe.pdf">Preprint</a>], Notre Dame Journal of Formal Logic, volume 66(1), pages 79-141, 2025 &copy University of Notre Dame. <p>
 
 
 P.B.Levy. <a href ="https://doi.org/10.1093/philmat/nkac011"><b> The Price of Mathematical Scepticism</b></a> [<a href="allornothing.pdf">Preprint</a>], Philosophia Mathematica, volume 30(3), pages 283-305, 2022 &copy Oxford Academic. <p>
 
-P.B.Levy. <b> Semantics Column: Call-By-Push-Value </b> [<a href="siglogcbpv2.pdf">Preprint</a>], in <a href="https://dl.acm.org/toc/siglog/2022/9/2">ACM SIGLOG News 9(2)</a> pages 7-29, 2022 &copy ACM.  With an introduction by Mike Mislove.  <p>
+P.B.Levy. <b> Semantics Column: Call-By-Push-Value </b> in <a href="https://dl.acm.org/toc/siglog/2022/9/2">ACM SIGLOG News 9(2)</a> pages 7-29, 2022 &copy ACM.  With an introduction by Mike Mislove.  <p>
 
 B.Jacobs, P.B.Levy, J.Rot. <a href="https://doi.org/10.1093/logcom/exab050"><b>Steps and Traces</b></a>, Journal of Logic and Computation 31(6), pages 1482-1525, 2021 &copy Oxford Academic.  Expanded version of <a href="https://doi.org/10.1007/978-3-030-00389-0_8"><b>Steps and Traces</b><a> [<a href="stepstraces.pdf">Preprint</a>] by the same authors, in the CMCS 2018 Proceedings, LNCS 11202, pages 122-143 &copy Springer. <p>
 
@@ -36,7 +36,7 @@ U.Dal Lago, F.Gavazzo, P.B.Levy.  <a href="https://doi.org/10.1109/LICS.2017.800
 O.Kammar, P.B.Levy, S.Moss, S.Staton. <a href="https://doi.org/10.1109/LICS.2017.8005109"><b>A monad for full ground reference cells</b></a> [<a href="fullgroundkripke.pdf">Preprint</a>]  Proceedings of the 32nd Annual ACM/IEEE Symposium on Logic in Computer Science,  LICS 2017 &copy IEEE.  <p>   
     
 P.B.Levy. <a href="https://doi.org/10.1145/3093333.3009898
-"><b>Contextual isomorphisms</b></a> [<a href="contextiso.pdf">Preprint</a>] in  Proceedings of POPL 2017, pages 400-414 &copy ACM.<p>
+"><b>Contextual isomorphisms</b></a> in  Proceedings of POPL 2017, pages 400-414 &copy ACM.<p>
 
 B.Geron, P.B.Levy. <a href="https://doi.org/10.1016/j.entcs.2016.09.035"><b>Iteration and labelled iteration</b></a> Proceedings of MFPS 2016, ENTCS volume 325, pages 127-146 &copy Elsevier.<p>
 
@@ -49,7 +49,7 @@ P.B.Levy, S.Staton. <a href="http://dx.doi.org/10.1145/2603088.2603150"><b> Tran
 
 N.Bowler, S.Goncharov, P.B.Levy, L.Schr&ouml;der. <a href="http://dx.doi.org/10.2168/LMCS-9(3:22)2013"> <b>Exploring the boundaries of monad tensorability on Set</b></a> in Logical Methods in Computer Science 9(3) paper 22, 2013. <p>
 
-S.Staton, P.B.Levy. <a href="http://dx.doi.org/10.1145/2429069.2429091"><b>Universal properties for impure programming languages</b></a> [<a href="universalcbv.pdf">Preprint</a>]  in Proceedings, 40th ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages, Rome, Italy, January 2013 &copy ACM. <p>
+S.Staton, P.B.Levy. <a href="http://dx.doi.org/10.1145/2429069.2429091"><b>Universal properties for impure programming languages</b></a> in Proceedings, 40th ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages, Rome, Italy, January 2013 &copy ACM. <p>
 
 R.Perera, U.A.Acar, J.Cheney, P.B.Levy.  <a href="http://dx.doi.org/10.1145/2364527.2364579"><b>Functional programs that explain their work</b></a> [<a href="functionalexplainsupp.pdf">Technical report</a>] in Proceedings, 17th ACM SIGPLAN International Conference on Functional Programming, Copenhagen, Denmark, September 2012 &copy ACM. <p>
 
@@ -59,7 +59,7 @@ L.Aceto, A.Ingólfsdóttir, P.B.Levy, J.Sack.  <a href="http://dx.doi.org/10.101
     Structures in Computer Science 22(2), special issue devoted to papers from EXPRESS 2009, pages 125-173, &copy Cambridge University Press, 2012. <p>
 
 
-V.Koutavas, P.B.Levy, E.Summii. <a href="http://dx.doi.org/10.1016/j.entcs.2011.09.023"><b>From applicative to environmental bisimulation</b></a> [<a href="applicenviron.pdf">Preprint</a>], Proceedings, 27th conference on the Mathematical Foundations of Programming Semantics, Carnegie Mellon, Pittsburgh, PA, May 2011, ENTCS volume 276, pages 215-235 (article 12) &copy Elsevier.  Expanded version of <a href="http://drops.dagstuhl.de/opus/volltexte/2010/2807/pdf/10351.KoutavasVasileios.ExtAbstract.2807.pdf"><b>Limitations of applicative bisimulation (preliminary report)</b></a> by the same authors, Proceedings, Dagstuhl seminar on Modelling, controlling and reasoning about state, 2010. <p>
+V.Koutavas, P.B.Levy, E.Summii. <a href="http://dx.doi.org/10.1016/j.entcs.2011.09.023"><b>From applicative to environmental bisimulation</b></a> Proceedings, 27th conference on the Mathematical Foundations of Programming Semantics, Carnegie Mellon, Pittsburgh, PA, May 2011, ENTCS volume 276, pages 215-235 (article 12) &copy Elsevier.  Expanded version of <a href="http://drops.dagstuhl.de/opus/volltexte/2010/2807/pdf/10351.KoutavasVasileios.ExtAbstract.2807.pdf"><b>Limitations of applicative bisimulation (preliminary report)</b></a> by the same authors, Proceedings, Dagstuhl seminar on Modelling, controlling and reasoning about state, 2010. <p>
 
 P.B.Levy. <a href="http://dx.doi.org/10.1007/978-3-642-19805-2_3"><b>Similarity Quotients as Final Coalgebras</B></a> [<a href="simshort.pdf">Preprint</a>].  In M.Hofmann (ed.), Proceedings</A>, 14th international conference on Foundations of Software Science and Computation Structures, Saarbruecken, Germany, March-April 2011, LNCS vol. 6604, pages 27-41,  &copy Springer. Here is a <a href="simshortlong.pdf"><b>long version</b></a> with proofs and additional results. <p>
 
@@ -67,17 +67,17 @@ P.B.Levy. <a href="http://hal.inria.fr/hal-00512377"><b>Characterizing recursive
 
 T.Altenkirch, P.B.Levy and S.Staton. <a href="http://dx.doi.org/10.1007/978-3-642-13962-8"><b>Higher-order containers</b></a> [<a href="hocont.pdf">Preprint</a>] in Programs, Proofs, Processes  6th Conference on Computability in Europe, Ponta Delgada (Azores), Portugal, July 2010, LNCS vol 6158, pages 11-20, &copy Springer.<p>
 
-P.B.Levy and K.Y.Weldemariam. <a href="http://dx.doi.org/10.1016/j.entcs.2009.07.098"><B>Exploratory functions on nondeterministic strategies, up to lower bisimilarity</B></a> [<a href="lowdefagain.pdf">Preprint</a>] Proceedings, 25th conference on the Mathematical Foundations of Programming Semantics, Oxford UK, April 2009, ENTCS volume 249, pages 357-375 (article 19) &copy Elsevier. <p>
+P.B.Levy and K.Y.Weldemariam. <a href="http://dx.doi.org/10.1016/j.entcs.2009.07.098"><B>Exploratory functions on nondeterministic strategies, up to lower bisimilarity</B></a> Proceedings, 25th conference on the Mathematical Foundations of Programming Semantics, Oxford UK, April 2009, ENTCS volume 249, pages 357-375 (article 19) &copy Elsevier. <p>
 
 S.B.Lassen and P.B.Levy. <a href="http://dx.doi.org/10.1109/LICS.2008.26"><b>Typed normal form bisimulation for parametric polymorphism</b></a> [<a href="polynorm.pdf">Preprint</a>] Proceedings, 23rd Annual IEEE Syposium on Logic in Computer Science, Carnegie Mellon University, Pittsburgh PA USA, June 2008, pages 341-352 &copy IEEE. <p> 
 
-P.B.Levy. <a href="http://dx.doi.org/10.1016/j.entcs.2008.10.015"><b>Global state considered helpful</b></a> [<a href="globalhelp.pdf">Preprint</a>] Proceedings, 24th conference on the Mathematical Foundations of Programming Semantics, University of Pennsylvania, Philadelphia PA USA, May 2008, ENTCS  volume 218, pages 241-259 (article 15) &copy Elsevier. <p>
+P.B.Levy. <a href="http://dx.doi.org/10.1016/j.entcs.2008.10.015"><b>Global state considered helpful</b></a> Proceedings, 24th conference on the Mathematical Foundations of Programming Semantics, University of Pennsylvania, Philadelphia PA USA, May 2008, ENTCS  volume 218, pages 241-259 (article 15) &copy Elsevier. <p>
 
 P.B.Levy.  <a href="http://dx.doi.org/10.1016/j.apal.2007.10.007"><b>Infinite trace equivalence</b></a> [<a href="finalglpljourn.pdf">Preprint</a>] Annals of Pure and Applied Logic</a>, vol. 151(2-3), pages 170-198, February 2008, special issue for for the 1st workshop on Games for Logic and Programming (GaLoP) 2005 &copy Elsevier.  Expanded version of <b><a href="http://dx.doi.org/10.1016/j.entcs.2005.11.069">Infinite trace equivalence</a></b> [<a href="mfpsinftrace.pdf">Preprint</a>] by the same author in Proceedings, 21st Conference on the Mathematical Foundations of Programming Semantics, Birmingham, U.K., June 2005, ENTCS volume 155 (published 2006), pages 467-496 (article 22)  &copy Elsevier. <p>
 
 S.B.Lassen and P.B.Levy. <a href="http://dx.doi.org/10.1007/978-3-540-74915-8_23"><b>Typed normal form bisimulation</b></a> [<a href="LassenLevy2007tnfb-4.pdf">Preprint</a>].  LNCS vol. 4646, J. Duparc and T. A. Henzinger (eds.), Proceedings of the 6th EACSL Annual Conference on Computer Science and Logic (CSL 07), Lausanne, Switzerland, September 2007, pages 283-297 &copy Springer. <p>
 
-P.B.Levy. <a href="http://dx.doi.org/10.1016/j.entcs.2007.02.036"><b>Amb breaks well-pointedness, ground amb doesn't</b></a> [<a href="ambhowenew.pdf">Preprint</a>].  Proceedings of the 23rd conference on the Mathematical Foundations of Programming Semantics, New Orleans, April 2007, ENTCS volume 173, pages 221-239 (article 14) &copy Elsevier. <p>
+P.B.Levy. <a href="http://dx.doi.org/10.1016/j.entcs.2007.02.036"><b>Amb breaks well-pointedness, ground amb doesn't</b></a>.  Proceedings of the 23rd conference on the Mathematical Foundations of Programming Semantics, New Orleans, April 2007, ENTCS volume 173, pages 221-239 (article 14) &copy Elsevier. <p>
 
 J.M.E.Hyland, P.B.Levy, G.D.Plotkin and A.J.Power. <a href="http://dx.doi.org/10.1016/j.tcs.2006.12.026"><b>Combining algebraic effects with continuations</b></a> [<a href="comb_cont_journal.pdf">Preprint</a>], Festschrift for John Reynolds' 70th birthday, Theoretical Computer Science, vol. 375 (1-3), pages 20-40, May 2007 &copy Elsevier.  Expanded version of <b>Combining continuations with other effects</b> [<a href="http://www.cs.bham.ac.uk/~pbl/papers/comb_cont.ps">Preprint</a>] by the same authors, 4th ACM-SIGPLAN Continuation Workshop, Venice, Italy, January 2004. <p>
 
@@ -90,9 +90,9 @@ Springer.
 
 P.B.Levy. <a href="http://dx.doi.org/10.1007/11787006_38"><b>Jumbo lambda-calculus</b></a> [<a href="jumboicalp.pdf">Preprint</a>] LNCS vol. 4052, M. Bugliesi, B. Preneel, V. Sassone, I. Wegener (eds.),  Proceedings,33rd International Colloquium on Automata, Languages and Programming, Track B, Venice, Italy, July 2006, Part 2, pages 444-455 &copy Springer. <p>  
 
-P.B.Levy. <a href="http://dx.doi.org/10.1016/j.entcs.2006.04.014"><b>Monads and adjunctions for global exceptions</b></a> [<a href="exceptions.pdf">Preprint</a>] Proceedings, 22nd Conference on the Mathematical Foundations of Programming Semantics, Genoa, Italy, 2006, ENTCS volume 158, pages 261-287 (article 14)  &copy Elsevier. <p>
+P.B.Levy. <a href="http://dx.doi.org/10.1016/j.entcs.2006.04.014"><b>Monads and adjunctions for global exceptions</b></a>, Proceedings, 22nd Conference on the Mathematical Foundations of Programming Semantics, Genoa, Italy, 2006, ENTCS volume 158, pages 261-287 (article 14)  &copy Elsevier. <p>
 
-P.B.Levy. <A href="https://doi.org/10.1016/j.entcs.2006.06.006"><b>Infinitary Howe's method</b></a> [<a href="howewriteup.pdf">Preprint</a>] Proceedings, 8th International Workshop on Coalgebraic Methods in Computer Science, Vienna, Austria, March 2006, ENTCS volume 164, issue 1, pages 85-104 (article 6) &copy Elsevier. <p>
+P.B.Levy. <A href="https://doi.org/10.1016/j.entcs.2006.06.006"><b>Infinitary Howe's method</b></a>, Proceedings, 8th International Workshop on Coalgebraic Methods in Computer Science, Vienna, Austria, March 2006, ENTCS volume 164, issue 1, pages 85-104 (article 6) &copy Elsevier. <p>
 
 P.B.Levy. <b>Jumping semantics for call-by-push-value</b> [<a href="jumpsem.pdf">Preprint</a>], O. Danvy and H. Thielecke eds., Proceedings, KAZAM Workshop, Birmingham, U.K., June 2005, University of Birmingham technical report CSR-06-10 (appeared 2006), pages 27-40. <p>
 
