commas and space

--- a/papers/index.html
+++ b/papers/index.html
@@ -23,13 +23,13 @@ B.Jacobs, P.B.Levy, J.Rot. <a href="https://doi.org/10.1093/logcom/exab050"><b>S
 
 P.B.Levy. <a href="https://doi.org/10.14712/1213-7243.2019.029"><b>Strong functors on many-sorted sets</b></a>, Commentationes Mathematicae Universitatis Carolinae 60(4) (2019), special issue in memory of V&#283;ra Trnkov&aacute;. <p>
 
-P.B.Levy, S.Goncharov.  <a href="https://doi.org/10.4230/LIPIcs.CALCO.2019.13"><b> Coinductive Resumption Monads: Guarded Iterative and Guarded Elgot </b></a> Proceedings, 8th Conference on Algebra and Coalgebra in Computer Science (CALCO) 2019. <p>
+P.B.Levy, S.Goncharov.  <a href="https://doi.org/10.4230/LIPIcs.CALCO.2019.13"><b> Coinductive Resumption Monads: Guarded Iterative and Guarded Elgot </b></a> in Proceedings, 8th Conference on Algebra and Coalgebra in Computer Science (CALCO) 2019. <p>
 
-N.Bowler, P.B.Levy, G.D.Plotkin. <a href="https://doi.org/10.1016/j.entcs.2018.11.003"><b>Initial algebras and final coalgebras consisting of nondeterministic finite trace strategies</b></a> 34th conference on the Mathematical Foundations of Programming Semantics, 2018.   &copy Elsevier. <p>
+N.Bowler, P.B.Levy, G.D.Plotkin. <a href="https://doi.org/10.1016/j.entcs.2018.11.003"><b>Initial algebras and final coalgebras consisting of nondeterministic finite trace strategies</b></a>, 34th conference on the Mathematical Foundations of Programming Semantics, 2018.   &copy Elsevier. <p>
 
-P.B.Levy.  <a href="https://lmcs.episciences.org/4714"><b> A ghost at &omega;<sub>1</sub> </b></a> Logical Methods in Computer Science 14(3), 2018, part of the <a href="https://lmcs.episciences.org/volume/view/id/273">Ji&#345;&iacute; Ad&aacute;mek festschrift</a>. <p>
+P.B.Levy.  <a href="https://lmcs.episciences.org/4714"><b> A ghost at &omega;<sub>1</sub> </b></a>, Logical Methods in Computer Science 14(3), 2018, part of the <a href="https://lmcs.episciences.org/volume/view/id/273">Ji&#345;&iacute; Ad&aacute;mek festschrift</a>. <p>
 
-M.Devesas Campos, P.B.Levy. <a href="https://doi.org/10.1007/978-3-319-89366-2_4"><b>A syntactic view of computational adequacy</b></a> Proceedings of FoSSaCS 2018, LNCS 10803 &copy Springer. <p>
+M.Devesas Campos, P.B.Levy. <a href="https://doi.org/10.1007/978-3-319-89366-2_4"><b>A syntactic view of computational adequacy</b></a> in Proceedings of FoSSaCS 2018, LNCS 10803 &copy Springer. <p>
 
 U.Dal Lago, F.Gavazzo, P.B.Levy.  <a href="https://doi.org/10.1109/LICS.2017.8005117"><b>Effectful Applicative Bisimilarity: Monads, Relators and Howe's Method</b></a> [<a href="http://arxiv.org/abs/1704.04647">Preprint</a> and <a href="https://arxiv.org/abs/1704.04647">long version</a>] in Proceedings of the 32nd Annual ACM/IEEE Symposium on Logic in Computer Science,  LICS 2017 &copy IEEE. <p>
 
@@ -38,9 +38,9 @@ O.Kammar, P.B.Levy, S.Moss, S.Staton. <a href="https://doi.org/10.1109/LICS.2017
 P.B.Levy. <a href="https://doi.org/10.1145/3093333.3009898
 "><b>Contextual isomorphisms</b></a> in  Proceedings of POPL 2017, pages 400-414 &copy ACM.<p>
 
-B.Geron, P.B.Levy. <a href="https://doi.org/10.1016/j.entcs.2016.09.035"><b>Iteration and labelled iteration</b></a> Proceedings of MFPS 2016, ENTCS volume 325, pages 127-146 &copy Elsevier.<p>
+B.Geron, P.B.Levy. <a href="https://doi.org/10.1016/j.entcs.2016.09.035"><b>Iteration and labelled iteration</b></a> in Proceedings of MFPS 2016, ENTCS volume 325, pages 127-146 &copy Elsevier.<p>
 
-P.B.Levy. <a href="https://doi.org/10.4230/LIPIcs.CALCO.2015.221"><b>Final coalgebras from corecursive algebras</b><a>  [<a href="finalmodal.pdf">Preprint</a>]in Proceedings of CALCO 2015.<p>
+P.B.Levy. <a href="https://doi.org/10.4230/LIPIcs.CALCO.2015.221"><b>Final coalgebras from corecursive algebras</b><a>  [<a href="finalmodal.pdf">Preprint</a>] in Proceedings of CALCO 2015.<p>
 
 J.Ad&aacute;mek, P.B.Levy, S.Milius, L.S.Moss, L.Sousa. <a href="http://dx.doi.org/10.1007/s10485-014-9372-9"><b>On final coalgebras of power-set functors and saturated trees</b></a> [<a href="http://www.mat.uc.pt/preprints/ps/p1239.pdf">Preprint</a>], Applied Categorical Structures, volume 23, issue 4, pages 609-641, special issue dedicated to George Janelidze on the occasion of his sixtieth birthday, 2015,  &copy Springer. <p>
 
