--- a/papers/index.html
+++ b/papers/index.html
@@ -40,7 +40,7 @@ P.B.Levy. <a href="https://doi.org/10.1145/3093333.3009898
 
 B.Geron, P.B.Levy. <a href="https://doi.org/10.1016/j.entcs.2016.09.035"><b>Iteration and labelled iteration</b></a> in Proceedings of MFPS 2016, ENTCS volume 325, pages 127-146 &copy Elsevier.<p>
 
-P.B.Levy. <a href="https://doi.org/10.4230/LIPIcs.CALCO.2015.221"><b>Final coalgebras from corecursive algebras</b><a>  [<a href="finalmodal.pdf">Preprint</a>] in Proceedings of CALCO 2015.<p>
+P.B.Levy. <a href="https://doi.org/10.4230/LIPIcs.CALCO.2015.221"><b>Final coalgebras from corecursive algebras</b><a> in Proceedings of CALCO 2015.<p>
 
 J.Ad&aacute;mek, P.B.Levy, S.Milius, L.S.Moss, L.Sousa. <a href="http://dx.doi.org/10.1007/s10485-014-9372-9"><b>On final coalgebras of power-set functors and saturated trees</b></a> [<a href="http://www.mat.uc.pt/preprints/ps/p1239.pdf">Preprint</a>], Applied Categorical Structures, volume 23, issue 4, pages 609-641, special issue dedicated to George Janelidze on the occasion of his sixtieth birthday, 2015,  &copy Springer. <p>
 
